step-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-shell
  labels:
    app: cloud-shell
spec:
  selector:
    app: cloud-shell
  ports:
  - name: cloud-shell
    port: 4444
    protocol: TCP
    targetPort: 4444
